--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 /*
 	blue_btn  	=	for blue Button
-	orange_btn 	=	for orange Button
 					span inside blue btn class the content will be bigger
 */
 
@@ -270,47 +269,6 @@ textarea {
 
 .social-area {
     float: right;
-}
-
-.social-icon {
-    float: left;
-    list-style-type: none;
-    padding: 0;
-}
-
-.social-icon li {
-    float: left;
-    margin: 8px 3px 0;
-}
-
-.social-icon li a {
-    display: inline-block;
-    height: 26px;
-    width: 26px;
-}
-
-.social-icon li a.hyoutube {
-    background: #fff url("../image/LRG_Icon_YouTube01.png") no-repeat scroll center center / 100% auto;
-    border: 1px solid #fff;
-    border-radius: 50px;
-}
-
-.social-icon li .hfb {
-    background: #fff url("../image/LRG_Icon_Facebook.png") no-repeat scroll center center / 100% auto;
-    border: 1px solid #fff;
-    border-radius: 50px;
-}
-
-.social-icon li .htwitter {
-    background: #fff url("../image/LRG_Icon_twitter.png") no-repeat scroll center center / 100% auto;
-    border: 1px solid #fff;
-    border-radius: 50px;
-}
-
-.social-icon li .hinsta {
-    background: #fff url("../image/LRG_Icon_Instagram.png") no-repeat scroll center center / 100% auto;
-    border: 1px solid #fff;
-    border-radius: 50px;
 }
 
 .menublock {
@@ -794,11 +752,14 @@ textarea {
         text-align: center;
     }
 
+  /* Removed 1/27/20:
     .posit {
+
         margin-bottom: -42px;
         position: relative;
         z-index: 1;
     }
+    */
 
     .menublock {
         margin: 10px 0 0;
@@ -855,7 +816,7 @@ textarea {
 
     .entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4 {
         padding-left: 0px;
-        padding-right: 0PX;
+        padding-right: 0px;
     }
 
     h1 {
@@ -872,7 +833,7 @@ textarea {
 
     .entry-content p {
         padding-left: 0px;
-        padding-right: 0PX;
+        padding-right: 0px;
         font-size: 18px;
 
     }
@@ -1132,17 +1093,24 @@ textarea {
 .pastors-bios h3 {
     margin-bottom: 0;
 }
+
+/* Search and Filter Styling */
 .searchandfilter ul li
 {
     float:left;
 }
+
+/* Job Description Styling */
 .job_description ul
 {
     padding-left:40px;
 }
+
+/* No Bullets Styling */
 .lqd-no-bullets li {
     list-style: none;
 }
+
 /* Group Guide styling */
 .group-guides h1.entry-title {
     font-size: 28px;
@@ -1152,6 +1120,7 @@ textarea {
     padding-left: 0px;
     text-transform:capitalize;
 }
+
 .group-guides-template-default h1  {
     padding-left: 0px;
     font-size: 20px;
@@ -1159,11 +1128,43 @@ textarea {
     margin-bottom: 5px;
     font-family: "arial";
 }
+
 .group-guides p {
     padding-left:0px;
     font-size: 18px;
 }
+
 .group-guides ul li {
-    font-size: 18px;}
+    font-size: 18px;
+}
+
 .group-guides ol li {
-    font-size: 18px;}
+    font-size: 18px;
+}
+
+/* Church Online Styling */
+div.church-online {
+  border: 2px solid #337ab7;
+  border-radius: 15px;
+  height:28px;
+  float:right;
+  margin-top:6px;
+  position:relative;
+}
+
+a.church-online-link {
+  color: #14a7e0;
+  display:block;
+  font-size:16px;
+  font-weight:bold;
+  height:38px;
+  line-height:16px;
+  margin-inline-end: 10px;
+  margin-inline-start:10px;
+  margin: 0 10px;
+  padding: 6px 0 0;
+  text-align:center;
+  text-overflow: ellipsis;
+  text-transform:uppercase;
+  white-space: nowrap; /* Keeps Online from moving to a new line. */
+}
