--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-/*
-	blue_btn  	=	for blue Button
-					span inside blue btn class the content will be bigger
-*/
-
 * {
     margin: 0;
     padding: 0;
@@ -92,6 +87,9 @@ h1, h2, h3, h4, h5, h6 {
     margin: 1.2rem 0 1.5rem;
 }
 
+/* Blue Button
+   Use span inside of blue button class to make content larger.
+   */
 .blue_btn {
     color: #0074c8;
     font-size: 16px;
@@ -134,6 +132,7 @@ h1, h2, h3, h4, h5, h6 {
     color: rgb(0, 86, 139);
 }
 
+/* Orange Button */
 .orange_btn {
     color: #f08a41;
     font-size: 16px;
@@ -176,6 +175,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #f08a41;
 }
 
+/* Headers */
 h1 {
     font-size: 50px;
 }
@@ -188,6 +188,7 @@ h3 {
     font-size: 30px;
 }
 
+/* Forms */
 input[type="text"], select, textarea {
     display: block;
     width: 100%;
@@ -271,6 +272,7 @@ textarea {
     float: right;
 }
 
+/* Menu */
 .menublock {
     margin: 0;
     background-color: #14a7e0
@@ -325,6 +327,7 @@ textarea {
     margin-top: -2px;
 }
 
+/* Forms */
 .form-group .form-controlinput {
     background: #dcddde;
     border: medium none;
@@ -352,6 +355,7 @@ textarea {
     cursor: pointer;
 }
 
+/* Footer */
 .footer_section {
     background: #14a7e0;
     padding: 18px 0;
@@ -427,7 +431,7 @@ textarea {
     padding: 15px 0;
 }
 
-.futr_menublock {
+.futr_menublock { /* Remove? */
     margin: 0 -32px 0 -30px;
 }
 
@@ -447,6 +451,7 @@ textarea {
     text-transform: uppercase;
 }
 
+/* Menu */
 .menu_list {
     margin: 0;
 }
@@ -472,6 +477,7 @@ textarea {
     text-decoration: none;
 }
 
+/* Main Content */
 .entry-content {
     padding: 15px;
     font-size: 24px;
@@ -492,7 +498,7 @@ textarea {
     padding-left: 0px;
 }
 
-.entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4 {
+.entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4 { /* TODO: Combine? */
     padding: 0 30px;
     display: inline-block;
 }
@@ -648,7 +654,7 @@ textarea {
         margin-left: auto;
     }
 
-    .futr_menublock {
+    .futr_menublock { /* TODO: Remove? */
         margin: 0px;
     }
 }
@@ -744,7 +750,7 @@ textarea {
         font-size: 1.2em
     }
 
-    .social-area {
+    .social-area { /* TODO: Remove? */
         color: #fff;
         float: none;
         margin-top: 17px;
@@ -814,7 +820,7 @@ textarea {
         text-align: center;
     }
 
-    .entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4 {
+    .entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4 { /* TODO: Duplicate? */
         padding-left: 0px;
         padding-right: 0px;
     }
@@ -869,6 +875,7 @@ textarea {
         text-align: center !important;
     }
 
+    /** Essential Grid */
     .esg-grid.esg-layout-even.esg-container {
         margin: 10px 0;
         padding: 0 !important;
@@ -883,6 +890,7 @@ textarea {
         margin-left: 0 !important;
         width: auto !important;
     }
+
 }
 
 @media (max-width: 479px) {
@@ -1076,12 +1084,9 @@ textarea {
 
 /* Location Dropdown */
 .location-block {
-    float: left;
-    margin-left: 177px;
-    width: 32%;
 }
 
-.location-block .selectric .label {
+.location-block .selectric .label { /* TODO: Remove? */
     font-family: 'Avenir Next LT Pro', sans-serif !important;
 }
 
@@ -1147,7 +1152,6 @@ div.church-online {
   border: 2px solid #337ab7;
   border-radius: 15px;
   height:28px;
-  float:right;
   margin-top:6px;
   position:relative;
 }
