--- a/css/lqd-messages.css
+++ b/css/lqd-messages.css
@@ -2,195 +2,196 @@
 
 /* Back Navigation Button on Individual Messages and Series */
 a.lqdm-home-btn {
-    background: #23527c;
-    padding: 8px 18px;
-    border-radius: 3px;
-    color: #fff;
+  background: #23527c;
+  padding: 8px 18px;
+  border-radius: 3px;
+  color: #fff;
 }
 
 /** SERIES **/
 .lqdm-series-feature-img {
-    display: block;
-    margin: 20px auto;
+  display: block;
+  margin: 20px auto;
 }
 
-.lqdm-series-each-msg, .lqdm-series-resources {
-    padding-left: 60px;
-    padding-right: 60px;
+.lqdm-series-each-msg,
+.lqdm-series-resources {
+  padding-left: 60px;
+  padding-right: 60px;
 }
 
 .lqdm-series-wrap h4 {
-    margin-left: 30px;
-    border-bottom: none !important;
-    text-decoration: underline;
-    font-size: 24px;
+  margin-left: 30px;
+  border-bottom: none !important;
+  text-decoration: underline;
+  font-size: 24px;
 }
 
 /** MESSAGE **/
 .lqdm-msg-feature-img {
-    width: 100%;
-    overflow: hidden;
+  width: 100%;
+  overflow: hidden;
 }
 
 .lqdm-msg-content {
-    padding-left:1vw;
-    padding-right:1vw;
+  padding-left: 1vw;
+  padding-right: 1vw;
 }
 
 .lqdm-other-msgs {
-    padding-left: 45px;
-    padding-right: 45px;
+  padding-left: 45px;
+  padding-right: 45px;
 }
 
 .lqdm-msg-content .row {
-    padding-bottom: 10px;
-    margin-bottom: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 /* Ensure Text fills available space */
 .lqdm-msg-summary .lqdm-right-col {
-    text-align: justify;
+  text-align: justify;
 }
 
 /** Container around Resources */
 ul.lqdm-container {
-    padding: 0;
+  padding: 0;
 }
 
 /* For Header Text */
 .lqdm-resources-lang {
-    font-size: 1em;
-    font-weight: 700;
+  font-size: 1em;
+  font-weight: 700;
 }
 
 ul.lqdm-msg-resources-list li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 ul.lqdm-msg-resources-list li.lqdm-list {
-    width: 45%;
-    display: inline-block;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    vertical-align: top;
+  width: 45%;
+  display: inline-block;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  vertical-align: top;
 }
 
 ul.lqdm-msg-resources-list li.lqdm-msg-resources-list-item {
-    width: 100%;
-    display: inline-block;
-    margin-right: 20px;
-    margin-bottom: 0;
+  width: 100%;
+  display: inline-block;
+  margin-right: 20px;
+  margin-bottom: 0;
 }
 
 /** If we only have resources in 1x language, then use 100% of width of row. */
 ul.lqdm-msg-resources-list ul.lqdm-single-lng-resources li.lqdm-msg-resources-list-item {
-    width: 100%;
+  width: 100%;
 }
 
 /* Wraps entire resources including header */
 .lqdm-msg-resources-row {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 h1.lqdm-msg-title {
-    margin-top: 30px;
-    font-size: 32px;
+  margin-top: 30px;
+  font-size: 32px;
 }
 
 .lqdm-other-msgs .lqdm-series-msgs-list {
-    padding-top: 5px;
-    display: table;
-    margin: 0 auto;
-    padding-right: 0;
+  padding-top: 5px;
+  display: table;
+  margin: 0 auto;
+  padding-right: 0;
 }
-
 
 /** SEARCH **/
 .search-field {
-    width: 60%;
-    background: #e2e2e2;
-    box-shadow: none;
-    height: 60px;
-    padding-left: 20px;
-    border: 1px solid #ccc;
+  width: 60%;
+  background: #e2e2e2;
+  box-shadow: none;
+  height: 60px;
+  padding-left: 20px;
+  border: 1px solid #ccc;
 }
 
 .lqdm-msgs-search .second-row {
-    padding-top: 15px;
-}
-
-.lqdm-msgs-search .first-row label {
-    width: 100%;
-    padding-top: 15px;
-}
-
-.lqdm-msgs-search .first-row .form-group {
-    width: 100%;
+  padding-top: 15px;
 }
 
 .lqdm-msgs-search label {
-    width: 100%;
+  width: 100%;
+}
+
+.lqdm-msgs-search .first-row label {
+  width: 100%;
+  padding-top: 15px;
+}
+
+.lqdm-msgs-search .first-row .form-group {
+  width: 100%;
 }
 
 .lqdm-msgs-search span {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 input.search-submit {
-    margin-right: 20px;
-    background: #14a7e0;
-    height: 60px;
-    color: #fff;
-    border: none;
-    padding-left: 10px;
-    padding-right: 10px;
+  margin-right: 20px;
+  background: #14a7e0;
+  height: 60px;
+  color: #fff;
+  border: none;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 h2.lqdm-search-results-title {
-    display: block;
-    font-size: 28px;
+  display: block;
+  font-size: 28px;
 }
 
 .lqdm-search-results {
-    padding-left: 20px;
+  padding-left: 20px;
 }
+
 /** END SEARCH **/
 
-/** MOBILE VIEWS **/
-/* Remove the box shadow on mobile */
+/** MOBILE VIEWS
+    Remove the box shadow on mobile */
 .mav-body {
-    box-shadow: 0 0 0;
+  box-shadow: 0 0 0;
 }
 
 .mav-single .lqdm-2-cols h4 {
-    text-align: center;
-    margin: auto;
-    width: 100%;
-    text-decoration: none;
-    font-size: 3rem;
-    padding-top: 5px;
-    padding-bottom:5px;
+  text-align: center;
+  margin: auto;
+  width: 100%;
+  text-decoration: none;
+  font-size: 3rem;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .mav-single li.lqdm-item.lqdm-thumb {
-    padding-top: 0;
-    padding-bottom: 0;
-    margin-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
 .mav-series {
-    font-size: 1.3em;
-    padding: 10px 5px 5px 5px;
+  font-size: 1.3em;
+  padding: 10px 5px 5px 5px;
 }
 
 .mav-single .entry-content {
-    font-size: 2.0rem;
-    line-height: 110%;
+  font-size: 2rem;
+  line-height: 110%;
 }
 
 .mav-single .col-md-12 {
-    padding-left: 5px;
-    padding-right: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .mav-single .lqdm-msg-series,
@@ -201,8 +202,8 @@ h2.lqdm-search-results-title {
 .mav-single .lqdm-msg-tags,
 .mav-single .lqdm-msg-date,
 .mav-single .lqdm-msg-summary {
-    padding-bottom: 0;
-    margin-bottom: 4px;
+  padding-bottom: 0;
+  margin-bottom: 4px;
 }
 
 .mav-single .lqdm-msg-series > div:first-of-type,
@@ -212,73 +213,72 @@ h2.lqdm-search-results-title {
 .mav-single .lqdm-msg-topics > div:first-of-type,
 .mav-single .lqdm-msg-tags > div:first-of-type,
 .mav-single .lqdm-msg-date > div:first-of-type,
-.mav-single .lqdm-msg-summary > div:first-of-type
-{
-    float: left;
-    padding-right:5px;
+.mav-single .lqdm-msg-summary > div:first-of-type {
+  float: left;
+  padding-right: 5px;
 }
 
 .mav-single div.row.lqdm-msg-title {
-    padding-bottom: 1px;
-    margin-bottom: 1px;
-    padding-top:0;
-    margin-top:0;
+  padding-bottom: 1px;
+  margin-bottom: 1px;
+  padding-top: 0;
+  margin-top: 0;
 }
 
 .mav-single .lqdm-msg-resources-row div.col-sm-3 {
-    padding-bottom:5px;
+  padding-bottom: 5px;
 }
 
 .mav-single .lqdm-msg-others {
-    padding-left: 15px;
-    padding-right: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .mav-single .lqdm-msg-resources-row div.col-sm-9 {
-    padding-left:25px;
+  padding-left: 25px;
 }
 
 .mav-single .lqdm-msg-summary {
-    padding-bottom:0;
-    margin-bottom:0;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
 .mav-single .lqdm-msg-others h1 {
-    margin-top:0;
+  margin-top: 0;
 }
 
 .mav-single li.lqdm-resources-lang {
-    margin-bottom:0;
+  margin-bottom: 0;
 }
 
 .mav-single li.lqdm-list {
-    margin-bottom:0;
+  margin-bottom: 0;
 }
 
 .mav-single .lqdm-msg-resources-list-item {
-    line-height:.9em;
+  line-height: 0.9em;
 }
 
 .mav-single .lqdm-item.lqdm-thumb {
-    padding:0;
-    margin-bottom:0;
+  padding: 0;
+  margin-bottom: 0;
 }
 
 .mav-series .lqdm-series-summary > p {
-    font-size: 1em !important;
+  font-size: 1em !important;
 }
 
 .mav-series .lqdm-series-each-msg {
-    padding-left: 5px;
-    padding-right: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 #socialShare .fa {
-    font-size: 5rem;
+  font-size: 5rem;
 }
 
 @media screen and (max-width: 800px) {
-    ul.lqdm-msg-resources-list li.lqdm-list {
-        width: 100%;
-    }
+  ul.lqdm-msg-resources-list li.lqdm-list {
+    width: 100%;
+  }
 }
